--- a/trail.html
+++ b/trail.html
@@ -1,83 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Chat Client</title>
-<style>
-  body, html {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-  }
-  #messages {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
-  #form {
-    display: flex;
-    padding: 10px;
-    background: #f0f0f0;
-  }
-  #input {
-    flex-grow: 1;
-    padding: 10px;
-    font-size: 16px;
-  }
-  #sendBtn {
-    padding: 10px 20px;
-    margin-left: 10px;
-    background-color: #007bff;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  #sendBtn:hover {
-    background-color: #0056b3;
-  }
-  .message {
-    background: #d1e7ff;
-    padding: 8px 12px;
-    margin-bottom: 8px;
-    border-radius: 5px;
-    max-width: 70%;
-    word-wrap: break-word;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>GROUP CHAT</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+    }
+    #messages {
+      flex-grow: 1;
+      padding: 10px;
+      overflow-y: auto;
+    }
+    .message {
+      background: #d1e7ff;
+      padding: 8px;
+      margin: 5px;
+      border-radius: 5px;
+      max-width: 75%;
+    }
+    #form {
+      display: flex;
+      padding: 10px;
+      background: #f0f0f0;
+    }
+    #input {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+    }
+    #sendBtn {
+      padding: 10px 20px;
+      background: #007bff;
+      color: white;
+      border: none;
+      margin-left: 10px;
+      font-size: 16px;
+    }
+    #sendBtn:hover {
+      background: #0056b3;
+    }
+    #passwordModal {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: black;
+      color: cyan;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      font-size: 20px;
+    }
+    #passwordModal input {
+      padding: 10px;
+      margin: 10px;
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
-  <div id="messages"></div>
-  <form id="form">
-    <input id="input" autocomplete="off" placeholder="Type message..." />
-    <button id="sendBtn">Send</button>
+  <div id="passwordModal">
+    <div>ENTER CHAT PASSWORD</div>
+    <input type="password" id="roomPassword" placeholder="Chat Password" />
+    <button onclick="joinRoom()">JOIN CHAT</button>
+  </div>
+
+  <div id="messages" style="display:none;"></div>
+  <form id="form" style="display:none;">
+    <input id="input" autocomplete="off" placeholder="Type your message..." />
+    <button id="sendBtn">SEND</button>
   </form>
+
+  <audio id="clickSound" src="https://github.com/Niranjan164/COMPILER/raw/main/click-151673_073339.mp3"></audio>
 
   <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
   <script>
-    // Use your Replit server URL here (NO trailing slash)
     const socket = io("https://d3b6b032-04e2-48fb-aa48-bf3ea1c7344d-00-2n78zv0o11wrq.pike.replit.dev");
+    let roomPassword = "";
 
     const form = document.getElementById("form");
     const input = document.getElementById("input");
     const messages = document.getElementById("messages");
+    const clickSound = document.getElementById("clickSound");
 
-    socket.on("chat message", (msg) => {
-      const div = document.createElement("div");
-      div.textContent = msg;
-      div.className = "message";
-      messages.appendChild(div);
-      messages.scrollTop = messages.scrollHeight;
-    });
+    function playClick() {
+      clickSound.currentTime = 0;
+      clickSound.play();
+    }
+
+    function joinRoom() {
+      playClick();
+      const pwdInput = document.getElementById("roomPassword");
+      roomPassword = pwdInput.value.trim();
+      if (!roomPassword) return;
+
+      socket.emit("join room", roomPassword);
+
+      document.getElementById("passwordModal").style.display = "none";
+      form.style.display = "flex";
+      messages.style.display = "block";
+    }
 
     form.addEventListener("submit", (e) => {
       e.preventDefault();
-      if (input.value.trim() === "") return;
-      socket.emit("chat message", input.value.trim());
+      playClick();
+      const msg = input.value.trim();
+      if (!msg) return;
+      socket.emit("chat message", { password: roomPassword, message: msg });
       input.value = "";
+    });
+
+    socket.on("chat message", (msg) => {
+      const div = document.createElement("div");
+      div.className = "message";
+      div.textContent = msg;
+      messages.appendChild(div);
+      messages.scrollTop = messages.scrollHeight;
     });
   </script>
 </body>
