--- a/chat.html
+++ b/chat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Secure App</title>
+  <title>NIRANJAN CREATIONS</title>
   <style>
     * {
       margin: 0; padding: 0;
@@ -113,7 +113,7 @@
 
   <!-- Main Page -->
   <div id="mainPage" class="screen">
-    <h2>MAIN MENU</h2>
+    <h2>NIRANJAN CREATIONS</h2>
     <button onclick="playClick(); openCreateChat()">CREATE CHAT</button>
     <button onclick="playClick(); openJoinChat()">JOIN CHAT</button>
     <button onclick="playClick(); closeWindow()">CLOSE</button>
